Asset Browser crash after clearing asset and dragging new asset to scene from cleared asset slot. #95394

Closed
opened 2022-02-01 14:48:13 +01:00 by Saku Partamies · 14 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181
Worked: (newest version of Blender that worked as expected)

Short description of error
If user clears asset in Asset Browser (Right click -> Clear Asset) and quickly after drags asset from the same slot to scene, then Blender crashes every time. Tested on 2 computers.

Exact steps for others to reproduce the error

  • Open AssetBrowser_DragMaterial_crash_v01.blend

  • In Asset Browser -> drag Test_material_A to a sphere object in viewport

  • Right click Test_material_A_MAT and select Clear Asset

  • Immediately after clearing asset (this must be done very very quickly), drag from exactly same asset slot the new material to sphere object. (Test_material_B_MAT)

  • CRASH

  • This is reproduceable from any other Asset Slot that is filled with new asset after clearing.

Blender file attached: AssetBrowser_DragMaterial_crash_v01.blend

AssetBrowser_DragMaterial_crash_v01.blend

Note: crash does not happen when Blender is running in IDE with debugger or even when run with script blender_debug_log.cmd so probably even with -d argument. Tested only on Windows systems so far

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` Worked: (newest version of Blender that worked as expected) **Short description of error** If user clears asset in Asset Browser (Right click -> Clear Asset) and quickly after drags asset from the same slot to scene, then Blender crashes every time. Tested on 2 computers. **Exact steps for others to reproduce the error** - Open AssetBrowser_DragMaterial_crash_v01.blend - In Asset Browser -> drag Test_material_A to a sphere object in viewport - Right click Test_material_A_MAT and select Clear Asset - Immediately after clearing asset (this must be done very very quickly), drag from exactly same asset slot the new material to sphere object. (Test_material_B_MAT) - CRASH - This is reproduceable from any other Asset Slot that is filled with new asset after clearing. Blender file attached: **AssetBrowser_DragMaterial_crash_v01.blend** [AssetBrowser_DragMaterial_crash_v01.blend](https://archive.blender.org/developer/F12839262/AssetBrowser_DragMaterial_crash_v01.blend) Note: crash does not happen when Blender is running in IDE with debugger or even when run with script `blender_debug_log.cmd` so probably even with `-d` argument. Tested only on Windows systems so far
Author

Added subscriber: @SakuP

Added subscriber: @SakuP

Added subscriber: @iss

Added subscriber: @iss

Can't reproduce crash here. Check if this happens with latest alpha build from https://builder.blender.org/download/daily/

Can't reproduce crash here. Check if this happens with latest alpha build from https://builder.blender.org/download/daily/

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Author

Thanks for checking Richard.

I tried with latest alpha from your link: blender-3.2.0-alpha+master.9cc4861e6f7d-windows.amd64-release
Still crashing 100% every time.

Did you test doing it fast, so first Clear Asset and immediately drag the new material to test object? Both operations from same asset "slot" in Asset browser without clicking anywhere else in between operations. We have reproduced this with different 2 computers.
We are preparing production Asset Library and there is lot of repetitive work when clearing unnecessary materials and this happened maybe 10 times before we started to look reason to the problem and I can produce the crash every time with above steps.

Did you also try in Windows?

Thanks for checking Richard. I tried with latest alpha from your link: **blender-3.2.0-alpha+master.9cc4861e6f7d-windows.amd64-release** Still crashing 100% every time. Did you test doing it fast, so first Clear Asset and immediately drag the new material to test object? Both operations from same asset "slot" in Asset browser without clicking anywhere else in between operations. We have reproduced this with different 2 computers. We are preparing production Asset Library and there is lot of repetitive work when clearing unnecessary materials and this happened maybe 10 times before we started to look reason to the problem and I can produce the crash every time with above steps. Did you also try in Windows?

I tried doing it exactly as you described above, Though not fast enough apparently. It took some training but I was able to reproduce the issue.

However when I tried to run this from debugger, I wasn't able to cause crash. @SakuP Can you run file blender_debug_log.cmd, cause crash and upload created files? Also check if .crash.txt file is mentioned at the end of debug log and upload it too, it would help.

I tried doing it exactly as you described above, Though not fast enough apparently. It took some training but I was able to reproduce the issue. However when I tried to run this from debugger, I wasn't able to cause crash. @SakuP Can you run file `blender_debug_log.cmd`, cause crash and upload created files? Also check if .crash.txt file is mentioned at the end of debug log and upload it too, it would help.
Author

Thanks again, Richard.

Unfortunately I also couldn't reproduce the issue using debugger mode (blender_debug_log.cmd). I tried with my sample scene and also the production scene where the issue was found. I double checked that with standard Blender mode it crashes every time doing those 2 steps that cause it.
I don't know what to do to provide more information, so let me know if you have any ideas that I should try next.

Thanks again, Richard. Unfortunately I also couldn't reproduce the issue using debugger mode (blender_debug_log.cmd). I tried with my sample scene and also the production scene where the issue was found. I double checked that with standard Blender mode it crashes every time doing those 2 steps that cause it. I don't know what to do to provide more information, so let me know if you have any ideas that I should try next.

Thanks for checking, I was hoping that on different system it would be possible to catch this. Will confirm without this info though as issue is reproducible.

Thanks for checking, I was hoping that on different system it would be possible to catch this. Will confirm without this info though as issue is reproducible.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Member

It somehow cannot generate the drag pic properly, see wm_drags_draw:

# backtrace
./bin/blender(BLI_system_backtrace+0x20) [0xc34adc0]
./bin/blender() [0x119f38c]
/lib64/libc.so.6(+0x42ae0) [0x7f3cb05f2ae0]
/lib64/libnvidia-glcore.so.495.44(+0xf61f20) [0x7f3c8bb61f20]
/lib64/libnvidia-glcore.so.495.44(+0xa7503d) [0x7f3c8b67503d]
/lib64/libnvidia-glcore.so.495.44(+0xa7f051) [0x7f3c8b67f051]
/lib64/libnvidia-glcore.so.495.44(+0xb95f4f) [0x7f3c8b795f4f]
/lib64/libnvidia-glcore.so.495.44(+0xb96e2e) [0x7f3c8b796e2e]
/lib64/libnvidia-glcore.so.495.44(+0xbb7095) [0x7f3c8b7b7095]
./bin/blender(_ZN7blender3gpu9GLTexture30update_sub_direct_state_accessEiPiS2_jjPKv+0x277) [0xad214a7]
./bin/blender(_ZN7blender3gpu9GLTexture10update_subEiPiS2_14eGPUDataFormatPKv+0x377) [0xad21827]
./bin/blender(GPU_texture_update_sub+0x52) [0xad0bae2]
./bin/blender(immDrawPixelsTexTiled_scaling_clipping+0x41b) [0x1c0111b]
./bin/blender(immDrawPixelsTexTiled_scaling+0x2d) [0x1c015dd]
./bin/blender() [0x170355b]
./bin/blender(wm_drags_draw+0x121) [0x1703d61]
./bin/blender() [0x1704c2f]
./bin/blender(wm_draw_update+0x9d3) [0x17056f3]
./bin/blender(WM_main+0x30) [0x17023e0]
./bin/blender(main+0x315) [0x10a3055]
/lib64/libc.so.6(+0x2d590) [0x7f3cb05dd590]
/lib64/libc.so.6(__libc_start_main+0x89) [0x7f3cb05dd649]
./bin/blender(_start+0x25) [0x119bd05]

@JulianEisel: mind checking? putting a bandaid on this?
Will raise prio since it is a bug in a recent feature, feel free to lower again if this feel unappropriate.

It somehow cannot generate the drag pic properly, see `wm_drags_draw`: ``` # backtrace ./bin/blender(BLI_system_backtrace+0x20) [0xc34adc0] ./bin/blender() [0x119f38c] /lib64/libc.so.6(+0x42ae0) [0x7f3cb05f2ae0] /lib64/libnvidia-glcore.so.495.44(+0xf61f20) [0x7f3c8bb61f20] /lib64/libnvidia-glcore.so.495.44(+0xa7503d) [0x7f3c8b67503d] /lib64/libnvidia-glcore.so.495.44(+0xa7f051) [0x7f3c8b67f051] /lib64/libnvidia-glcore.so.495.44(+0xb95f4f) [0x7f3c8b795f4f] /lib64/libnvidia-glcore.so.495.44(+0xb96e2e) [0x7f3c8b796e2e] /lib64/libnvidia-glcore.so.495.44(+0xbb7095) [0x7f3c8b7b7095] ./bin/blender(_ZN7blender3gpu9GLTexture30update_sub_direct_state_accessEiPiS2_jjPKv+0x277) [0xad214a7] ./bin/blender(_ZN7blender3gpu9GLTexture10update_subEiPiS2_14eGPUDataFormatPKv+0x377) [0xad21827] ./bin/blender(GPU_texture_update_sub+0x52) [0xad0bae2] ./bin/blender(immDrawPixelsTexTiled_scaling_clipping+0x41b) [0x1c0111b] ./bin/blender(immDrawPixelsTexTiled_scaling+0x2d) [0x1c015dd] ./bin/blender() [0x170355b] ./bin/blender(wm_drags_draw+0x121) [0x1703d61] ./bin/blender() [0x1704c2f] ./bin/blender(wm_draw_update+0x9d3) [0x17056f3] ./bin/blender(WM_main+0x30) [0x17023e0] ./bin/blender(main+0x315) [0x10a3055] /lib64/libc.so.6(+0x2d590) [0x7f3cb05dd590] /lib64/libc.so.6(__libc_start_main+0x89) [0x7f3cb05dd649] ./bin/blender(_start+0x25) [0x119bd05] ``` @JulianEisel: mind checking? putting a bandaid on this? Will raise prio since it is a bug in a recent feature, feel free to lower again if this feel unappropriate.

This issue was referenced by 75ef51cc80

This issue was referenced by 75ef51cc80c6906bf6a5ba484ae4be8ce1550ddc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2022-05-31 12:29:52 +02:00
Member

Fixed the crash (75ef51cc80) and a further issue ({765c16bbd08b}), should be fine now.

Fixed the crash (75ef51cc80) and a further issue ({765c16bbd08b}), should be fine now.
Thomas Dinges added this to the 3.2 milestone 2023-02-08 15:51:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95394
No description provided.