source/blender/editors/interface/interface.cc
@@ -930,6 +930,9 @@ static void ui_but_update_old_active_from_new(uiBut *oldbut, uiBut *but)
   if (but->dragpoin && (but->dragflag & UI_BUT_DRAGPOIN_FREE)) {
     SWAP(void *, but->dragpoin, oldbut->dragpoin);
   }
+  if (but->imb) {
+    SWAP(ImBuf *, but->imb, oldbut->imb);
+  }
 
   /* NOTE: if layout hasn't been applied yet, it uses old button pointers... */
 }
